next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Git log comments.

Current Version (future 6.2.0-beta2, GIT branch-6-2):
-------------------------------------------------

- Fix wms_style_name in GetMap requests (#4439)

- Fix segfault in queryByFilter function in MapScript

- Adjusted WCS 2.0 to WCS Core 2.0.1 and GMLCOV 1.0.1 corrigenda (#4003)

- Adjusted mediatype to multipart/related in WCS 2.0 (#4003)

- Fix symbolObj.getImage seg fault in PHP/MapScript

- Fix bad handling of startindex in some drivers (#4011)
  WFSGetFeature also now uses a global maxfeatures and startindex to support
  maxfeatures across layers rather than within layers

- Fixed bugs with WCS 1.1/2.0 with VSIMEM (#4369)

Version 6.2.0-beta1 (2012-06-29):
---------------------------------

- Add notable changes here. Less important changes should go only in the
  commit message and not appear here.
  
- Fixed the OGR driver to use point or line spatial filter geometries in degenerated cases (#4420)

- Fix WFS filter is produced as non-standard XML (#4171)

- Fix pixmap symbol loading issue (#4329)

- Added INSPIRE ExtendedCapabilities and DOCTYPE definition to WMS 1.1.1 (#3608)

- Fix wms_enable_request-related errors are not properly tagged (#4187)

- Fixed "msGetMarkerSize() called on unloaded pixmap symbol" in mapsymbol.c (#4225)

- Fixed PHP MapScript support for PHP 5.4 (#4309)

- Fix msOGREscapeSQLParam could return random data (#4335)

- Fixed locations of supported and native formats in Capabilities and CoverageDescriptions for WCS 2.0 (#4003)

- Made format parameter for WCS 2.0 GetCoverage requests optional (#4003)

- Swig mapscript for multi-label support (#4310)

- Fix creation of a vector symbolObj in mapscript (#4318)

- Added coverage metadata in WCS (#4306)
