@@ -14,7 +14,9 @@ For a complete change history, please see the Git log comments.
 Current Version (future 6.2.0-beta2, GIT branch-6-2):
 -------------------------------------------------
 
-- Fix wms_style_name in GetMap requests (#4439)
+- Fixed wrong size in LegendURL of root layer (#4441)
+
+- Fixed wms_style_name in GetMap requests (#4439)
 
 - Fix segfault in queryByFilter function in MapScript
 
